# Shoji

./: pyproject.toml
.github/workflows/: build_publish.yml
