[project]
name = "shoji"

[tool.poetry]
version = "0.44.5"
description = "post process *clip reads after alignment. Replacement for htseq-clip"
authors = ["Sudeep Sahadevan"]
license = "MIT"
readme = "README.md"

[project.urls]
homepage = "https://github.com/EMBL-Hentze-group/Shoji/"
documentation = "https://shoji.readthedocs.io/"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
cython = "^3.0.10"
numpy = "^1.26.4"
pyarrow = "^20.0.0"
sortedcontainers = "^2.4.0"
rich-click = "^1.8.3"
loguru = "^0.7.2"
pysam = "^0.23.3"

[tool.poetry.scripts]
shoji = "shoji.cli:run"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
mypy = "^1.16.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"


[tool.poetry.group.docs.dependencies]
sphinx = "^8.2.3"
sphinx-rtd-theme = "^3.0.2"
sphinx-autobuild = "^2024.10.3"
sphinxcontrib-napoleon = "^0.7"
pillow = "^11.3.0"
mock = "^5.2.0"
commonmark = "^0.9.1"
recommonmark = "^0.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
